--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -305,12 +305,13 @@ div.section{
 .mosaic {
 	display: grid;
 	grid-template-columns: repeat(4, 1fr); /* Default: 4 equal columns */
-	gap: 10px;
+	grid-template-rows: auto auto 400px;
+	gap: 5px;
 }
 
 .mosaic img {
-	width: 100%;
 	height: 100%;
+	width: 100%;
 	object-fit: cover;
 }
 
