--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,6 +12,8 @@
 	--white: white;
 	--black: black;
 
+	--bg-color: #FAFAF7;  /* F7F7F2 */
+
 	--arizona-red:#AB0520;
     --arizona-blue:#0C234B;
 
@@ -68,6 +70,7 @@ body{
 /* text */
 p{
 	font-size: 24px;
+	font-size: clamp(22px, 2vw, 24px);
 	font-weight: 300;
 	font-style: normal;
 
@@ -76,18 +79,21 @@ p{
 
 ol{
 	font-size: 24px;
+	font-size: clamp(22px, 2vw, 24px);
 	font-weight: 300;
 	font-style: normal;
 }
 
 h1{
-	font-size: 52px;
+	font-size: 62px;
+	font-size: clamp(28px, 10vw, 65px);
 	font-weight: 300;
 	font-style: normal;
 }
 
 h2{
 	font-size: 40px;
+	font-size: clamp(28px, 10vw, 40px);
 	font-weight: 300;
 	font-style: normal;
 	/* margin-top: 10px; */
@@ -125,7 +131,7 @@ img{
 	display: grid;
 	grid-template-columns: 1fr 4fr 1fr;
 	column-gap: 0%;
-	background-color: white;
+	background-color: var(--bg-color);
 
 	row-gap: 20px;
 	padding: 0px;
@@ -133,7 +139,7 @@ img{
 }
   
 .grid-container > div {
-	background-color: white;
+	background-color: var(--bg-color);
 	text-align: left;
 	grid-column: span;
 	padding: 0px 0px;
@@ -142,8 +148,10 @@ img{
 
 /* start navbar */
 div.navbar {
+	z-index: 1000; 
+	
 	width: 70%;
-	min-width: 1000px;
+	min-width: 800px;
 	margin: 0 auto;
 
 	position: fixed;
@@ -151,7 +159,7 @@ div.navbar {
 	right: 0;
 
 	/* existing code untouched below */
-	background-color: rgba(255, 255, 255, 0.9);
+	background-color: var(--bg-color);
 	display: grid;
 	grid-template-columns: 40% 44% 12%;
 	row-gap: 20px;
@@ -182,7 +190,7 @@ div.navbar {
 
 /* page links */
 .links {
-	grid-column: 2;
+	grid-column: 3;
 	display: flex;
 	align-items: right;
 	justify-content: right;
@@ -209,7 +217,7 @@ div.navbar {
 div.footer{
 	width: 100%;
 	/* grid-column: span 3; */
-	background-color: white;
+	background-color: var(--bg-color);
 	color: black;
 
 	text-align: center;
@@ -219,14 +227,14 @@ div.footer{
 	bottom: 0px;
 	align-items: center;
 
-	min-height: 50px;
+	min-height: 5vh;
 }
 
 div.landing{
 	grid-column: 2;
 
-	margin-top: 100px;
-	min-height: 85vh;
+	margin-top: 8vh;
+	min-height: 82vh;
 
 	width: 100%;
 
@@ -260,7 +268,7 @@ div.section{
 	text-align: left;
 
 	padding-top: 50px;
-	/* min-height: 80vh; */
+	/* min-height: 90vh; */
 
 	display: flex;
 	flex-direction: row;
@@ -283,21 +291,45 @@ div.section{
 	/* margin: 0px; */
 }
 
+.section h2{
+	width: 100%;
+	height: fit-content;
+	margin-bottom: 10px;
+	/* margin: 0px; */
+}
+
 .section div.content{
-	width: 60%;
+	width: 100%;
 	min-width: 375;
 	padding-top: 0;
 }
 
 .section .image{
 	width: 40%;
-	min-width: 300px;
+	/* min-width: 300px; */
 	display: flex;          /* Make .image a flex container */
 	justify-content: center;  /* Horizontally center */
 	align-items: center; 
 
 	margin-bottom: 30px;
 }
+
+.crop {
+  width: 100%;       /* desired rectangle width */
+  height: 30vw;      /* desired rectangle height */
+  overflow: hidden;   /* hide outside parts */
+  position: relative;
+}
+
+.crop img {
+  width: 100%;        /* make image fill the width */
+  height: auto;       /* maintain aspect ratio */
+  position: absolute;
+  top: 50%;           /* move image down 50% */
+  left: 0;
+  transform: translateY(-50%); /* center vertically in container */
+}
+
 
 .section div.square{
 	width: 30%;
