--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,7 +12,7 @@
 	--white: white;
 	--black: black;
 
-	--bg-color: #FAFAF7;  /* F7F7F2 */
+	--bg-color: #F7F7F2;  /* F7F7F2, #FAFAF7 */
 
 	--arizona-red:#AB0520;
     --arizona-blue:#0C234B;
@@ -60,6 +60,8 @@
 
 	padding: 0;
 	margin: auto;
+
+	background-color: var(--bg-color);
 }
 
 body{
@@ -106,14 +108,17 @@ h3{
 }
 
 a{
-	color: var(--black);
-	text-decoration: underline;
+	color: var(--base02);
+	text-decoration: none;
 	text-decoration-thickness: 1px;
 	text-underline-offset: 3.5px;
 }
 
 a:hover{
-	text-decoration: none;
+	text-decoration: underline;
+	color: var(--black);
+	text-decoration-thickness: 1px;
+	text-underline-offset: 3.2px;
 }
 
 sup{
@@ -149,7 +154,7 @@ img{
 /* start navbar */
 div.navbar {
 	z-index: 1000; 
-	
+
 	width: 70%;
 	min-width: 800px;
 	margin: 0 auto;
@@ -247,9 +252,19 @@ div.landing{
 }
 
 .landing div{
+	width: 100%;
+	min-width: 275px;
+}
+
+.profile-image{
+	max-width: 40%;
+	min-width: 200px;
+}
+
+.landing-info{
 	text-align: right;
-	width: 50%;
-	min-width: 375px;
+	max-width: 60%;
+	min-width: 200px;
 }
 
 div.landing a{
@@ -316,7 +331,8 @@ div.section{
 
 .crop {
   width: 100%;       /* desired rectangle width */
-  height: 30vw;      /* desired rectangle height */
+  min-height: 30vw;      /* desired rectangle height */
+  max-height: 400px;
   overflow: hidden;   /* hide outside parts */
   position: relative;
 }
@@ -380,6 +396,22 @@ div.section{
 
 
 @media screen and (max-width: 900px) {
+
+	.profile-image{
+		max-width: 100%;
+		min-width: 275px;
+		width: 100%;
+
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+
+	.landing-info{
+		text-align: center;
+		max-width: 100%; 
+		width: 100%;
+	}
 	/* For mobile phones: */
 	.navbar .icon {
 		display:block;
