--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -100,6 +100,8 @@ h1{
 	font-weight: 300;
 	font-style: normal;
 	margin-bottom: 0;
+
+	scroll-margin-top: 70px;
 }
 
 h2{
@@ -108,6 +110,8 @@ h2{
 	font-weight: 300;
 	font-style: normal;
 	/* margin-top: 10px; */
+
+	scroll-margin-top: 100px;
 }
 
 h3{
