--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -9,7 +9,7 @@
   <div class="links" id="links">
     <a href="research.html" target="_self" onclick="close_nav()">Research</a>
     <a href="teaching.html" target="_self" onclick="close_nav()">Teaching</a>
-    <a href="music.html" target="_self" onclick="close_nav()">Outreach/Sports/Music</a>
+    <a href="music.html" target="_self" onclick="close_nav()">Etc.</a>
     <a href="contact.html" target="_self" onclick="close_nav()">Contact</a>
   </div>
 </div>
